@@ -21,7 +21,13 @@
  */
 package com.falsepattern.jwin32.memory;
 
-import jdk.incubator.foreign.*;
+import java.lang.foreign.MemoryAddress;
+import java.lang.foreign.MemoryLayout;
+import java.lang.foreign.MemorySegment;
+import java.lang.foreign.SegmentAllocator;
+import java.nio.ByteOrder;
+
+import static jdk.internal.foreign.PlatformLayouts.Win64.*;
 
 /**
  * A memory allocator handles creation of fixed-size memory segments. De-allocation support is not compulsive,
@@ -118,7 +124,7 @@ public interface MemoryAllocator extends SegmentAllocator {
      * @return A memory segment with size 2 and alignment 2
      */
     default MemorySegment mallocShort() {
-        return mallocAligned(CLinker.C_SHORT.byteSize(), CLinker.C_SHORT.byteAlignment());
+        return mallocAligned(C_SHORT.byteSize(), C_SHORT.byteAlignment());
     }
 
     /**
@@ -134,7 +140,7 @@ public interface MemoryAllocator extends SegmentAllocator {
      * @return A memory segment with size 4 and alignment 4
      */
     default MemorySegment mallocInt() {
-        return mallocAligned(CLinker.C_INT.byteSize(), CLinker.C_INT.byteAlignment());
+        return mallocAligned(C_INT.byteSize(), C_INT.byteAlignment());
     }
 
     /**
@@ -150,7 +156,7 @@ public interface MemoryAllocator extends SegmentAllocator {
      * @return A memory segment with size 4/8 and alignment 4/8, depending on the operating system
      */
     default MemorySegment mallocLong() {
-        return mallocAligned(CLinker.C_LONG.byteSize(), CLinker.C_LONG.byteAlignment());
+        return mallocAligned(C_LONG.byteSize(), C_LONG.byteAlignment());
     }
 
     /**
@@ -166,7 +172,7 @@ public interface MemoryAllocator extends SegmentAllocator {
      * @return A memory segment with size 8 and alignment 8
      */
     default MemorySegment mallocLongLong() {
-        return mallocAligned(CLinker.C_LONG_LONG.byteSize(), CLinker.C_LONG_LONG.byteAlignment());
+        return mallocAligned(C_LONG_LONG.byteSize(), C_LONG_LONG.byteAlignment());
     }
 
     /**
@@ -182,7 +188,7 @@ public interface MemoryAllocator extends SegmentAllocator {
      * @return A memory segment with size 8 and alignment 8
      */
     default MemorySegment mallocPointer() {
-        return mallocAligned(CLinker.C_POINTER.byteSize(), CLinker.C_POINTER.byteAlignment());
+        return mallocAligned(C_POINTER.byteSize(), C_POINTER.byteAlignment());
     }
 
     /**
@@ -219,6 +225,16 @@ public interface MemoryAllocator extends SegmentAllocator {
      * @return The native copy of the string
      */
     default MemorySegment toCString(String str) {
-        return CLinker.toCString(str, this);
+        char[] chars = new char[str.length() + 1];
+        MemorySegment ms = MemorySegment.ofArray(chars);
+        ms.asByteBuffer().order(ByteOrder.nativeOrder()).asCharBuffer().put(str).put('\0');
+        return ms;
+    }
+
+    static String fromCString(MemorySegment ms) {
+        var cb = ms.asByteBuffer().order(ByteOrder.nativeOrder()).asCharBuffer();
+        int limit = 0; // check for zero termination
+        for(int end = cb.limit(); limit < end && cb.get(limit) != 0; limit++) {}
+        return cb.limit(limit).toString();
     }
 }
